<resources>
    <string name="app_name">Oakley Saves</string>
    <string name="title_home">Home</string>
    <string name="title_finances">Overview</string>
    <string name="title_latest_finances">History</string>
    <string name="title_profile">Profile</string>
    <string name="cd_fab_add_finance">Add new finance</string>
    <string name="finance_name">Finance name</string>
    <string name="finance_type">Finance type</string>
    <string name="finance_period">Installments number</string>
    <string name="finance_period_start">Initial date</string>
    <string name="finance_period_end">Final date</string>
    <string name="finance_price">Price</string>
    <string name="txt_used_balance">Used balance: %1$.2f</string>
    <string name="txt_remaining_balance">Remaining balance: %s</string>
    <string name="txt_check_finances">Check my finances</string>
    <string name="txt_add_new_finance">Add new finance</string>
    <string name="txt_overview_period">Period</string>
    <string name="finance_type_physiology">Physiology</string>
    <string name="finance_type_security">Security</string>
    <string name="finance_type_social">Social</string>
    <string name="finance_type_leisure">Leisure</string>
    <string name="finance_type_personal_development">Personal Development</string>
    <string name="finance_time" translatable="false">%d/%d</string>

    <string-array name="finance_types">
        <item>@string/finance_type_physiology</item>
        <item>@string/finance_type_security</item>
        <item>@string/finance_type_social</item>
        <item>@string/finance_type_leisure</item>
        <item>@string/finance_type_personal_development</item>
    </string-array>

    <string-array name="overview_types">
        <item>Now</item>
        <item>Next 6 Months</item>
    </string-array>

    <string-array name="currency_names">
        <item>US Dollar - USD</item>
        <item>Brazilian Real - BRL</item>
        <item>Euro - EUR</item>
        <item>British Pound - GBP</item>
        <item>Japanese Yen - JPY</item>
    </string-array>


    <string name="overview_present">Present</string>
    <string name="overview_future">Future</string>
    <string name="txt_register">Register</string>
    <string name="txt_hint_name">Name</string>
    <string name="txt_hint_cpf" translatable="false">CPF</string>
    <string name="txt_hint_email" translatable="false">Email</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_age">Age</string>
    <string name="txt_hint_salary">Salary</string>
    <string name="txt_hint_confirm_email">Confirm Email</string>
    <string name="txt_hint_confirm_password">Confirm Password</string>
    <string name="txt_already_registered">Already registered? Sign in!</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_invalid_username">Please, insert a valid username!</string>
    <string name="txt_invalid_cpf">Please, insert a valid cpf!</string>
    <string name="txt_invalid_email">Please, insert a valid email!</string>
    <string name="txt_invalid_password">Please, insert a valid password!</string>
    <string name="txt_emails_different">Emails don\'t match! Please, insert the same email.</string>
    <string name="txt_password_different">Passwords don\'t match! Please, insert the same password.</string>
    <string name="txt_invalid_age">Please, insert a valid age!</string>
    <string name="txt_invalid_salary">Please, insert a valid salary!</string>
    <string name="txt_invalid_cellphone">Please, insert a valid cellphone number!</string>
    <string name="txt_hint_cellphone_number">Cellphone Number</string>
    <string name="txt_user_registered">User registered successfully!</string>
    <string name="txt_user_fail_to_register">Error registering user! Try again later.</string>
    <string name="txt_user_not_exists">There\'s no user with this info! Check if the email or password is correct.</string>
    <string name="txt_no_account">Don\'t have account? Consider registering \nfirst.</string>
    <string name="txt_user_already_registered">User already registered! Please, do login.</string>
    <string name="txt_edit_finance">Edit Finance</string>
    <string name="txt_finance_updated">Finance updated successfully!</string>
    <string name="txt_finance_created">Finance created successfully!</string>
    <string name="txt_unexpected_error">Unexpected error. Try again later.</string>
    <string name="txt_finance_name_error">Finance name cannot be empty.</string>
    <string name="txt_finance_type_error">Please, select a finance type.</string>
    <string name="txt_finance_start_error">Finance initial date cannot be empty.</string>
    <string name="txt_finance_end_error">Finance final date cannot be empty.</string>
    <string name="txt_finance_price_error">Finance price cannot be empty.</string>
    <string name="txt_delete_finance">Do you want to delete this finance?</string>
    <string name="txt_finance_deleted">Finance deleted successfully.</string>
    <string name="txt_finance_deleted_connect_to_internet"> Please, connect to internet to confirm the changes.</string>
    <string name="txt_warning_delete_finance">Warning: You cannot undo this.</string>
    <string name="txt_user_salary" translatable="false">$%1$.2f</string>
    <string name="txt_edit_user_title">Edit Info</string>
    <string name="txt_save">Save</string>
    <string name="txt_edit_info">Edit</string>
    <string name="txt_user_info_name">Name: %s</string>
    <string name="txt_user_info_phone">Phone: %s</string>
    <string name="txt_user_info_age">Age: %d</string>
    <string name="txt_user_info_salary">Salary: %s</string>
    <string name="first_month">Month 01</string>
    <string name="second_month">Month 02</string>
    <string name="third_month">Month 03</string>
    <string name="forth_month">Month 04</string>
    <string name="fifth_month">Month 05</string>
    <string name="sixth_month">Month 06</string>
    <string name="txt_user_in_debit">In debit! In the next month you need to avoid this.</string>
    <string name="txt_finances_ok">Everything going good! Your finances match your salary.</string>
    <string name="txt_finance_savings">Nice! You\'re saving money correctly.</string>
    <string name="txt_empty_list">Your finances list is empty!\nAdd some finance to be shown here.</string>
    <string name="txt_used_balance_default">Used balance: 0</string>
    <string name="txt_delete_finance_btn">Delete Finance</string>
    <string name="txt_view_charts">View chart finance</string>
    <string name="txt_more_details">See more</string>
    <string name="txt_hello_user">Hello, %s!</string>
    <string name="txt_spendings">Spendings</string>
    <string name="txt_months">Months</string>
    <string name="txt_future_spendings">Future Spendings</string>
    <string name="txt_category_spending_title">Spendings by Category</string>
    <string name="txt_categories_legend">Categories</string>
    <string name="txt_calculate_taxes">Calculate Taxes</string>
    <string name="txt_general_features">General Features</string>
    <string name="txt_taxable_value">Value</string>
    <string name="txt_taxable_percentage">Percentage</string>
    <string name="btn_calculate_tax">Calculate</string>
    <string name="txt_general_tab">General Tab</string>
    <string name="txt_currency_converter">Currency Converter</string>
    <string name="txt_base_currency">Original Currency</string>
    <string name="txt_converted_currency">Final Currency</string>
    <string name="btn_convert_currency">Convert</string>
    <string name="txt_converted_value">Rate: %s\nValue: %s</string>
    <string name="txt_invalid_currency">Currency cannot be empty!</string>
    <string name="txt_invalid_value">Value cannot be empty!</string>
    <string name="txt_empty" translatable="false" />
    <string name="txt_update_finance">Are you sure you want to update this finance?</string>
</resources>